make sup a bit smaller

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton&display=swap">
     <style>
        a { color: #BB86FC; text-decoration: none; }
+       sup { vertical-align: super; font-size: 80%; }
     </style>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
