--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira+Stencil+One&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton&display=swap">
+    <style>
+       a { color: #BB86FC; text-decoration: none; }
+       a:hover { text-decoration: underline; }
+    </style>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
