--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira+Stencil+One&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton&display=swap">
-    <style>
-       a { color: #BB86FC; text-decoration: none; }
-       a:hover { text-decoration: underline; }
-    </style>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta charset="utf-8"/>
     <meta
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
-    <meta name="theme-color" content="#000000" />
+    <title>Biscuits Internet Project</title>
     <meta
       name="description"
       content="Offical fan site for the Disco Biscuits"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,600,700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira+Stencil+One&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton&display=swap"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/icon/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/icon/favicon-32x32.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/icon/favicon-16x16.png"/>
+    <link rel="manifest" href="%PUBLIC_URL%/icon/site.webmanifest"/>
+    <link rel="mask-icon" href="%PUBLIC_URL%/icon/safari-pinned-tab.svg" color="#5bbad5"/>
+    <meta name="msapplication-TileColor" content="#da532c"/>
+    <meta name="theme-color" content="#ffffff"/>
+    <meta name="twitter:image:src" content="%PUBLIC_URL%/biscuits-internet-project.jpg"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Biscuits Internet Project"/>
+    <meta name="twitter:description" content="Offical fan site for the Disco Biscuits."/>
+    <meta property="og:image" content="%PUBLIC_URL%/biscuits-internet-project.jpg"/>
+    <meta property="og:site_name" content="Biscuits Internet Project"/>
+    <meta property="og:type" content="profile"/>
+    <meta property="og:title" content="Biscuits Internet Project"/>
+    <meta property="og:url" content="http://discobiscuits.net/"/>
+    <meta property="og:description" content="Offical fan site for the Disco Biscuits."/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -36,7 +47,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Biscuits Internet Project</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
