add og and tw tags

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,19 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira+Stencil+One&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton&display=swap">
+
+    <meta name="twitter:image:src" content="%PUBLIC_URL%/biscuits-internet-project.jpg"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Biscuits Internet Project"/>
+    <meta name="twitter:description" content="Offical fan site for the Disco Biscuits."/>
+    <meta property="og:image" content="%PUBLIC_URL%/biscuits-internet-project.jpg"/>
+    <meta property="og:site_name" content="Biscuits Internet Project"/>
+    <meta property="og:type" content="profile"/>
+    <meta property="og:title" content="Biscuits Internet Project"/>
+    <meta property="og:url" content="https://discobiscuits.net/"/>
+    <meta property="og:description" content="Offical fan site for the Disco Biscuits."/>
+
+
     <style>
        a { color: #BB86FC; text-decoration: none; }
        sup { vertical-align: super; font-size: 80%; }
