--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Saira+Stencil+One&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton&display=swap">
 
-    <meta name="twitter:image:src" content="%PUBLIC_URL%/biscuits-internet-project.jpg"/>
+    <meta name="twitter:image" content="https://discobiscuits.net/biscuits-internet-project.jpg"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:title" content="Biscuits Internet Project"/>
     <meta name="twitter:description" content="Offical fan site for the Disco Biscuits."/>
-    <meta property="og:image" content="%PUBLIC_URL%/biscuits-internet-project.jpg"/>
+    <meta property="og:image" content="https://discobiscuits.net/biscuits-internet-project.jpg"/>
     <meta property="og:site_name" content="Biscuits Internet Project"/>
     <meta property="og:type" content="profile"/>
     <meta property="og:title" content="Biscuits Internet Project"/>
